Fixed some layout issues and styles. Added stricter display safeguards to prevent unauthorized users from viewing the application.

--- a/FrontEnd/src/scss/main.scss
+++ b/FrontEnd/src/scss/main.scss
@@ -18,8 +18,8 @@ body{
 }
 
 body.gradeian {
-  width: 100%;
-  display: table;
+  overflow:hidden;
+  height:100%;
   border-collapse: collapse;
   font-family: "Source Code Pro", monospace;
 
@@ -28,8 +28,9 @@ body.gradeian {
   }
 
   .body {
-    position: relative;
-
+    height:100%;
+    display:grid;
+    grid-template-rows: max-content auto;
   }
 
   .fa {
@@ -114,18 +115,12 @@ meter {
   bottom: 0;
   z-index: 999;
   background: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   & > * {
-    display: table;
-    height: 100%;
-    width: 100%;
-
-    & > * {
-      text-align: center;
-      vertical-align: middle;
-      display: table-cell;
-      font-size: 4em;
-    }
+    max-width:500px;
   }
 }
 
